# textual-jumper

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  tests.yml
src/textual_jumper/: __init__.py  demo.py  jump_overlay.py  jumper.py
tests/: test_integration.py  test_jump_overlay.py  test_jumper.py  test_multi_char_keys.py
