[project]
name = "textual-jumper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=6.3.0",
]

[project.scripts]
textual-jumper = "textual_jumper.demo:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
